kubernetes-templating/cert-manager/example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: static-site
  name: static-site
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-site
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: static-site
    spec:
      containers:
      - image: dockersamples/static-site
        imagePullPolicy: Always
        name: static-site
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
