kubernetes-templating/cert-manager/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: static-site
  name: static-site
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: static-site
  type: ClusterIP
